# BastCalv

doodle/: Dockerfile  README.md  app.py  docker-compose.yml  init.sql  pyproject.toml  requirements.txt  test.env  update_passwords.py
doodle/static/: script.js
doodle/static/css/: style.css
doodle/templates/: contact.jinja  index.jinja  layout.jinja  loginEleve.jinja  loginFormateur.jinja  rdv.jinja  rdv_pris.jinja  register.jinja  validation_contact_form.jinja  validation_prendrerdv_form.jinja  validelogin.jinja  validelogout.jinja
